--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ figcaption {
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">YOUNG LORDS OF NEW YORK</a>
+                <a class="navbar-brand" href="#page-top">Visulaizing Access</a>
                 <!--<a class="navbar-brand" href="about.html">About</a>-->
             </div>
 
@@ -369,10 +369,10 @@ figcaption {
                 <!-- Masthead Avatar Image-->
          
                     <div class="intro-text">
-                        <h1 class="masthead-heading text-uppercase mb-0">All Power to All the People</h1>
+                        <h1 class="masthead-heading text-uppercase mb-0">Building a Healthier Future for All</h1>
                         <hr class="star-light">
                        <div class="row">
-                           <p align="center">About the Young Lords</p> 
+                           <p align="center">"Healthy People sets data-driven national objectives to improve health and well-being over the next decade." But what does this look like?</p> 
                         </div>
                 
             </div>
@@ -384,96 +384,83 @@ figcaption {
 		    <p><h2>Visualizing Health</h2></p>
 
  <div class="container">
+<p class="lead">Healthy People 2020 “provides science-based, 10-year national objectives for improving the health of all Americans” (“About Healthy People,” n.d.). The goals of the initiative, as stated by the U.S. government, are three-fold:
+<ol>
+<li>Encourage collaborations across communities and sectors.</li>
+<li>Empower individuals toward making informed health decisions.</li>
+<li>Measure the impact of prevention activities. (“About Healthy People,” n.d.)</li>
+</ol>
+</p>
+<p class="lead">To make Healthy People 2020 public-facing, the ODPHP created <a href=”https://health.gov/healthypeople”>Healthypeople.gov</a>, a website to present Healthy People 2020 initiatives and data-driven resources. Healthypeople.gov is a data- driven digital rhetoric project with a set of tools to access, customize, and use the extensive data collected by the initiative and its partner organizations. DATA2020 is the Healthy People 2020 interactive data tool housed on the Healthypeople.gov website. The stated goal of this project is to “allow users to explore data and technical information related to Healthy People 2020 objectives” (“How to Use DATA2020”).</p>
+<p class="lead">Figures 1 and 2 represent the user journey through the search, retrieval, and customization of data displays offered by the DATA2020 tool. Figure 1 is the starting point for the user to choose an objective and data sources from which to draw results. Figure 2 is a view from a search for the social determinants of health topic area. Figure 2 shows the number of potential items for customization in the display: the user can check boxes to see more information about the data, such as confidence intervals and standard error; view visualizations such as charts and graphs; view breakout data by more specific variables; and learn about methodology and download .csv files of raw data (Fig. 3).</p>
+<br>
+<img src=””>
+<img src=””>
+<img src=””>
+<br>
+<p class="lead">The DATA2020 tool and its focus on interactivity and customization of data simultaneously makes accessible and obscure data collected in its database. The tool reflects what Katherine Hepworth described as “little acknowledgement of or reflection upon the seductive quality of data visualization” which “has dangerous implications for research quality, and the human subjects represented through research data visualizations” (2016, p. 7-8). The ability to customize and reduce complexity of social problems (as in Figure 2, employment of parents) to a fairly simple chart may be of use to a government official in need of specific data for a report, but it does not do the work of informing citizens to take action. In fact, as Hepworth argued, interactivity provides individual perspectives that “reduce complexity” (2016, p. 13), which may satisfy a specific user, but renders invisible greater insight into systems of oppression or an ability to “foster empathy” (2016, p. 19). The display in Figure 2 does not invite contemplation or reflection, but merely shows that the U.S. has improved its overall statistic from 71% to 74% of children with one full-time working parent, seeming to indicate slight improvement without context.</p>
 
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed leo lacinia, rutrum enim a, auctor tortor. Suspendisse auctor nibh mauris, ut mattis ligula lacinia non. Nulla nisi lectus, feugiat a lectus ut, ultrices commodo justo. Ut enim eros, consequat in condimentum non, dapibus sed mauris. Morbi orci metus, blandit lobortis lacus commodo, porta vulputate mauris. In ultricies orci sapien, id pharetra lacus pellentesque sollicitudin. Nulla et massa elit. Sed semper nunc vitae magna bibendum viverra. Integer fringilla facilisis elit, in tempus orci vestibulum sed. Nullam in tempor sapien, ut tristique sem. Aenean id tincidunt odio. Cras consequat id nisl non facilisis. Phasellus ligula dolor, mollis ac tempor ut, pharetra in urna.</p>
+<p class="lead">Part of what DATA2020 may be doing is attempting to achieve a level of clarity in its data design through streamlined displays of complex data. Charles Kostelnick argued that clarity in data design, as it is enacted in the science and social science fields, such as statistics and economics, tends to be seen as universal rather than adaptive (2007, p. 283). While professional communication and graphic design are moving more towards a “philosophy of rhetorical adaptation,” or clarity as contingent on audience, purpose, and context, this is not the case in the sciences (Kostelnick, 2007, p. 283). As a result, “[a] good match for one rhetorical situation may be a disaster in another, and vice versa” (Kostelnick, 2007, p. 284). DATA2020 is perhaps one of these disasters for audiences other than health professionals with a specific purpose for this information well at hand.</p>
+
+<p class="lead">Taking the data available requires contextualizing said data in order to make any sense of the numbers. For example, below are graphs representing expanded access to healthcare services. This language of access has been popular as of late neoliberal political circles. While the data shows modest gains in access to care, the availability of care to many rural populations has decreased. This conflation between “access to” and having healthcare is one such disaster area. Below are examples of different portions of the population and their reported “access” to health services:</p>
+
+
 <figure>
 		      <div id="chart_1" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
 <br>
-	 <p><h2>Visualizing Health</h2></p>
 
- <div class="container">
-
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed leo lacinia, rutrum enim a, auctor tortor. Suspendisse auctor nibh mauris, ut mattis ligula lacinia non. Nulla nisi lectus, feugiat a lectus ut, ultrices commodo justo. Ut enim eros, consequat in condimentum non, dapibus sed mauris. Morbi orci metus, blandit lobortis lacus commodo, porta vulputate mauris. In ultricies orci sapien, id pharetra lacus pellentesque sollicitudin. Nulla et massa elit. Sed semper nunc vitae magna bibendum viverra. Integer fringilla facilisis elit, in tempus orci vestibulum sed. Nullam in tempor sapien, ut tristique sem. Aenean id tincidunt odio. Cras consequat id nisl non facilisis. Phasellus ligula dolor, mollis ac tempor ut, pharetra in urna.</p>
 <figure>
 		      <div id="chart_2" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
 <br>
-	 <p><h2>Visualizing Health</h2></p>
-
- <div class="container">
-
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed leo lacinia, rutrum enim a, auctor tortor. Suspendisse auctor nibh mauris, ut mattis ligula lacinia non. Nulla nisi lectus, feugiat a lectus ut, ultrices commodo justo. Ut enim eros, consequat in condimentum non, dapibus sed mauris. Morbi orci metus, blandit lobortis lacus commodo, porta vulputate mauris. In ultricies orci sapien, id pharetra lacus pellentesque sollicitudin. Nulla et massa elit. Sed semper nunc vitae magna bibendum viverra. Integer fringilla facilisis elit, in tempus orci vestibulum sed. Nullam in tempor sapien, ut tristique sem. Aenean id tincidunt odio. Cras consequat id nisl non facilisis. Phasellus ligula dolor, mollis ac tempor ut, pharetra in urna.</p>
+	 
 <figure>
 		      <div id="chart_3" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
 	 <br>
-	 <p><h2>Visualizing Health</h2></p>
-
- <div class="container">
-
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed leo lacinia, rutrum enim a, auctor tortor. Suspendisse auctor nibh mauris, ut mattis ligula lacinia non. Nulla nisi lectus, feugiat a lectus ut, ultrices commodo justo. Ut enim eros, consequat in condimentum non, dapibus sed mauris. Morbi orci metus, blandit lobortis lacus commodo, porta vulputate mauris. In ultricies orci sapien, id pharetra lacus pellentesque sollicitudin. Nulla et massa elit. Sed semper nunc vitae magna bibendum viverra. Integer fringilla facilisis elit, in tempus orci vestibulum sed. Nullam in tempor sapien, ut tristique sem. Aenean id tincidunt odio. Cras consequat id nisl non facilisis. Phasellus ligula dolor, mollis ac tempor ut, pharetra in urna.</p>
+	 
 <figure>
 		      <div id="chart_4" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
 	 	 <br>
-	 <p><h2>Visualizing Health</h2></p>
-
- <div class="container">
-
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed leo lacinia, rutrum enim a, auctor tortor. Suspendisse auctor nibh mauris, ut mattis ligula lacinia non. Nulla nisi lectus, feugiat a lectus ut, ultrices commodo justo. Ut enim eros, consequat in condimentum non, dapibus sed mauris. Morbi orci metus, blandit lobortis lacus commodo, porta vulputate mauris. In ultricies orci sapien, id pharetra lacus pellentesque sollicitudin. Nulla et massa elit. Sed semper nunc vitae magna bibendum viverra. Integer fringilla facilisis elit, in tempus orci vestibulum sed. Nullam in tempor sapien, ut tristique sem. Aenean id tincidunt odio. Cras consequat id nisl non facilisis. Phasellus ligula dolor, mollis ac tempor ut, pharetra in urna.</p>
+	
 <figure>
 		      <div id="chart_5" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
 	 	 	 <br>
-	 <p><h2>Visualizing Health</h2></p>
-
- <div class="container">
-
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed leo lacinia, rutrum enim a, auctor tortor. Suspendisse auctor nibh mauris, ut mattis ligula lacinia non. Nulla nisi lectus, feugiat a lectus ut, ultrices commodo justo. Ut enim eros, consequat in condimentum non, dapibus sed mauris. Morbi orci metus, blandit lobortis lacus commodo, porta vulputate mauris. In ultricies orci sapien, id pharetra lacus pellentesque sollicitudin. Nulla et massa elit. Sed semper nunc vitae magna bibendum viverra. Integer fringilla facilisis elit, in tempus orci vestibulum sed. Nullam in tempor sapien, ut tristique sem. Aenean id tincidunt odio. Cras consequat id nisl non facilisis. Phasellus ligula dolor, mollis ac tempor ut, pharetra in urna.</p>
+	 
 <figure>
 		      <div id="chart_6" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
 		 	 	 <br>
-	 <p><h2>Visualizing Health</h2></p>
-
- <div class="container">
-
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed leo lacinia, rutrum enim a, auctor tortor. Suspendisse auctor nibh mauris, ut mattis ligula lacinia non. Nulla nisi lectus, feugiat a lectus ut, ultrices commodo justo. Ut enim eros, consequat in condimentum non, dapibus sed mauris. Morbi orci metus, blandit lobortis lacus commodo, porta vulputate mauris. In ultricies orci sapien, id pharetra lacus pellentesque sollicitudin. Nulla et massa elit. Sed semper nunc vitae magna bibendum viverra. Integer fringilla facilisis elit, in tempus orci vestibulum sed. Nullam in tempor sapien, ut tristique sem. Aenean id tincidunt odio. Cras consequat id nisl non facilisis. Phasellus ligula dolor, mollis ac tempor ut, pharetra in urna.</p>
+	 
 <figure>
 		      <div id="chart_7" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
 	 		 	 	 <br>
-	 <p><h2>Visualizing Health</h2></p>
-
- <div class="container">
-
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed leo lacinia, rutrum enim a, auctor tortor. Suspendisse auctor nibh mauris, ut mattis ligula lacinia non. Nulla nisi lectus, feugiat a lectus ut, ultrices commodo justo. Ut enim eros, consequat in condimentum non, dapibus sed mauris. Morbi orci metus, blandit lobortis lacus commodo, porta vulputate mauris. In ultricies orci sapien, id pharetra lacus pellentesque sollicitudin. Nulla et massa elit. Sed semper nunc vitae magna bibendum viverra. Integer fringilla facilisis elit, in tempus orci vestibulum sed. Nullam in tempor sapien, ut tristique sem. Aenean id tincidunt odio. Cras consequat id nisl non facilisis. Phasellus ligula dolor, mollis ac tempor ut, pharetra in urna.</p>
+	 
 <figure>
 		      <div id="chart_8" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
 	 	 		 	 	 <br>
-	 <p><h2>Visualizing Health</h2></p>
-
- <div class="container">
-
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed leo lacinia, rutrum enim a, auctor tortor. Suspendisse auctor nibh mauris, ut mattis ligula lacinia non. Nulla nisi lectus, feugiat a lectus ut, ultrices commodo justo. Ut enim eros, consequat in condimentum non, dapibus sed mauris. Morbi orci metus, blandit lobortis lacus commodo, porta vulputate mauris. In ultricies orci sapien, id pharetra lacus pellentesque sollicitudin. Nulla et massa elit. Sed semper nunc vitae magna bibendum viverra. Integer fringilla facilisis elit, in tempus orci vestibulum sed. Nullam in tempor sapien, ut tristique sem. Aenean id tincidunt odio. Cras consequat id nisl non facilisis. Phasellus ligula dolor, mollis ac tempor ut, pharetra in urna.</p>
+	
 <figure>
 		      <div id="chart_9" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
