--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Healthy Visuals</title>
+    <title>healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -240,7 +240,7 @@ function drawChart3() {
     }
 	  function drawChart9() {
      var data = google.visualization.arrayToDataTable([
-['date', 'Metropolitan', 'Non-metropolitan'],
+['Year', 'Metropolitan', 'Non-metropolitan'],
 ['2010', 82.2,	79.6],
 ['2011', 83.3,	80.2],
 ['2012', 83.6,	80.1],
@@ -262,7 +262,7 @@ function drawChart3() {
 
       chart.draw(data, options);
     }
-	          function drawChart10() {
+	          function drawCharta() {
           var data = google.visualization.arrayToDataTable([
             ['Year', 'Male', 'Female'],
             ['2010',  79.7,	83.9],
@@ -282,11 +282,11 @@ function drawChart3() {
             legend: { position: 'bottom' }
           };
 
-          var chart = new google.visualization.LineChart(document.getElementById('chart_10'));
+          var chart = new google.visualization.LineChart(document.getElementById('chart_a'));
 
           chart.draw(data, options);
         }
-              function drawChart11() {
+              function drawChartb() {
           var data = google.visualization.arrayToDataTable([
            ['Year', 'American Indian or Alaska Native only', 'Asian only', 'Native Hawaiian or Other Pacific Islander only', 'Black or African American only', 'White only', '2 or more races', 'Hispanic or Latino', 'Not Hispanic or Latino', 'Black or African American only, not Hispanic or Latino', 'White only, not Hispanic or Latino'],
            ['2010',	56,	    82.9,	75.6,	79.4,	82.4,	84.2,	68,	    84.8,	79.3,	86.3],
@@ -306,7 +306,7 @@ function drawChart3() {
             legend: { position: 'bottom' }
           };
 
-          var chart = new google.visualization.LineChart(document.getElementById('chart_11'));
+          var chart = new google.visualization.LineChart(document.getElementById('chart_b'));
 
           chart.draw(data, options);
         }
@@ -469,14 +469,14 @@ figcaption {
 <p class="lead">Taking the data available requires contextualizing said data in order to make any sense of the numbers. For example, below are graphs representing expanded access to healthcare services. This language of access has been popular as of late neoliberal political circles. While the data shows modest gains in access to care, the availability of care to many rural populations has decreased. This conflation between “access to” and having healthcare is one such disaster area. Below are examples of different portions of the population and their reported “access” to health services:</p>
 
 <figure>
-		      <div id="chart_10" style="width: 900px; height: 500px"></div>
+		      <div id="chart_a" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
 <br>
 
 <figure>
-		      <div id="chart_11" style="width: 900px; height: 500px"></div>
+		      <div id="chart_b" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
 </figure>
