--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>healthy Visuals</title>
+    <title>Healthy Visuals</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -286,30 +286,7 @@ function drawChart3() {
 
           chart.draw(data, options);
         }
-              function drawChartb() {
-          var data = google.visualization.arrayToDataTable([
-           ['Year', 'American Indian or Alaska Native only', 'Asian only', 'Native Hawaiian or Other Pacific Islander only', 'Black or African American only', 'White only', '2 or more races', 'Hispanic or Latino', 'Not Hispanic or Latino', 'Black or African American only, not Hispanic or Latino', 'White only, not Hispanic or Latino'],
-           ['2010',	56,	    82.9,	75.6,	79.4,	82.4,	84.2,	68,	    84.8,	79.3,	86.3],
-           ['2011',	65.8,	83.5,	77.3,	81,	    83.3,	84,	    68.9,	85.8,	81.2,	87.1],
-           ['2012',	73,	    83.2,	87.9,	82,	    83.3,	85.5,	69.6,	86.1,	82.2,	87.3],
-           ['2013',	70.6,	85.8,	89.3,	81.1,	83.7,	84.7,	69.3,	86.6,	81.2,	87.8],
-           ['2014',	71.7,	89.2,	87.8,	86.3,	86.7,	89.9,	74.5,	89.5,	86.5,	90.3],
-           ['2015',	78.6,	92.5,	87.4,	88.7,	89.3,	90.5,	78.9,	91.8,	88.8,	92.5],
-           ['2016',	74.6,	93.5,	90.7,	88.5,	89.8,	91,	    80.4,	91.9,	88.7,	92.7],
-           ['2017',	73.1,	92.6,	88.8,	88.8,	89.4,	89.6,	79.4,	91.8,	88.9,	92.6],
-           ['2018',	71.4,	92.6,	90.6,	87.9,	89.1,	89.9,	79.9,	91.3,	87.9,	92.2]
-          ]);
 
-          var options = {
-            title: 'Access to Healthcare through Insurance, by Race',
-            curveType: 'function',
-            legend: { position: 'bottom' }
-          };
-
-          var chart = new google.visualization.LineChart(document.getElementById('chart_b'));
-
-          chart.draw(data, options);
-        }
   </script>
     <style>
 		#menu {
@@ -475,12 +452,7 @@ figcaption {
 </figure>
 <br>
 
-<figure>
-		      <div id="chart_b" style="width: 900px; height: 500px"></div>
-<figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
 
-</figure>
-<br>
 <figure>
 		      <div id="chart_1" style="width: 900px; height: 500px"></div>
 <figcaption style="font-family:Helvetica Neue" text-align: center>Access to Health Services through Insurance, by Family income (percent poverty threshold)</figcaption>
